# entropy-balance-weighting

./: CITATION.cff  Makefile  README.md  pyproject.toml  requirements-dev.txt
entropy_balance_weighting/: __init__.py  ebw_penalty.py  ebw_routines.py  shared.py  typing.py
examples/: pums_example.py  seperable_moments.py  simple_examples.py
test/: test_colinear.py  test_dense.py  test_dump.py  test_elastic.py  test_equations.py  test_inequality.py  test_parametric.py  test_parametric_elastic.py  test_penalty.py  test_sparse.py
