[project]
name = "entropy_balance_weighting"
version = "0.4.0"
authors = [{name="Carl Sanders", email="carl.e.sanders@census.gov"}]
description = "Fast implementations of entropy balancing for survey reweighting."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy",
	"scipy", 
       "pyarrow",
       "polars", 
	"numexpr",
	"sparse_dot_mkl",
	"pypardiso"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["weighting"]
strict = true

[[tool.mypy.overrides]]
module = ["numexpr", "scipy.*", "pypardiso", "formulaic", 
       "sparse_dot_mkl", "patito.*", "sympy", "hypothesis.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["E", "W", "F", "B",
       "C4", "D", "I", "SIM",
       "TCH", "TID", "Q",
       "PT", "RUF", "PTH"]

ignore = [
       "E501",
       "D100",
       "D107",
       "D104",
       "D203",
       "D212"
       ]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
