[project]
name = "entropy_balance_weighting"
version = "0.5.0"
authors = [{name="Carl Sanders", email="carl.e.sanders@census.gov"}]
description = "Fast implementations of entropy balancing for sample reweighting."
license = "Public Domain OR CC0"
license-file = "LICENSE.md"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["numpy",
	"scipy",
	"numexpr",
	"sparse_dot_mkl",
	"pypardiso"]
 
[project.urls]
Homepage = "https://github.com/uscensusbureau/entropy-balance-weighting"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["weighting"]
strict = true

[[tool.mypy.overrides]]
module = ["numexpr", "scipy.*", "pypardiso",
       "sparse_dot_mkl", "hypothesis.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["E", "W", "F", "B",
       "C4", "D", "I", "SIM",
       "TCH", "TID", "Q",
       "PT", "RUF", "PTH"]

ignore = [
       "E501",
       "D100",
       "D107",
       "D104",
       "D203",
       "D212"
       ]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
